--- a/Resources/Storyboards/MainStoryboard.storyboard
+++ b/Resources/Storyboards/MainStoryboard.storyboard
@@ -264,11 +264,6 @@
                         <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" id="AcS-FG-3ya">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="180"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.31372549019607843" green="0.31372549019607843" blue="0.31372549019607843" alpha="1" colorSpace="calibratedRGB"/>
-                            </view>
                             <view contentMode="scaleToFill" id="8iV-0n-5gL">
                                 <rect key="frame" x="0.0" y="180" width="320" height="49"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
@@ -367,6 +362,10 @@
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                             </view>
+                            <imageView contentMode="scaleToFill" image="video_placeholder.png" id="jz8-7g-YcJ">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="180"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.18823529411764706" green="0.18823529411764706" blue="0.18823529411764706" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
@@ -379,7 +378,7 @@
                         <outlet property="displayName" destination="BGC-Fe-rke" id="2sO-o5-Kwg"/>
                         <outlet property="likeCount" destination="gzt-KT-TsR" id="KU0-Cs-AYP"/>
                         <outlet property="playCount" destination="d58-TZ-UWt" id="G9d-Yk-uud"/>
-                        <outlet property="videoBackgroundView" destination="AcS-FG-3ya" id="0AU-LI-0xH"/>
+                        <outlet property="videoImage" destination="jz8-7g-YcJ" id="94B-xB-7RM"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JUj-cI-96J" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -482,6 +481,7 @@
         <image name="40-inbox.png" width="24" height="24"/>
         <image name="44-shoebox.png" width="24" height="22"/>
         <image name="homeview.png" width="245" height="114"/>
+        <image name="video_placeholder.png" width="320" height="180"/>
     </resources>
     <classes>
         <class className="EBEventTableViewController" superclassName="XBReloadableTableViewController">
@@ -515,6 +515,7 @@
                 <relationship kind="outlet" name="likeCount" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="playCount" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="videoBackgroundView" candidateClass="UIView"/>
+                <relationship kind="outlet" name="videoImage" candidateClass="UIImageView"/>
             </relationships>
         </class>
         <class className="VMVideoTableViewController" superclassName="XBReloadableTableViewController">
