--- a/Resources/Storyboards/MainStoryboard.storyboard
+++ b/Resources/Storyboards/MainStoryboard.storyboard
@@ -297,6 +297,34 @@
             </objects>
             <point key="canvasLocation" x="-4587" y="-434"/>
         </scene>
+        <!--Card Details FullContent Page View Controller-->
+        <scene sceneID="4aq-Ed-WAw">
+            <objects>
+                <viewController storyboardIdentifier="cardDetailsFullContentPage" id="vOT-4O-Bo1" userLabel="Card Details FullContent Page View Controller" customClass="XECardDetailsFullContentPageViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="A5U-3m-lt2" userLabel="FullContent View">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="308"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" id="r5D-eh-Qtp" customClass="DTAttributedTextView">
+                                <rect key="frame" x="10" y="10" width="300" height="288"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="deviceRGB"/>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </view>
+                    <nil key="simulatedStatusBarMetrics"/>
+                    <nil key="simulatedTopBarMetrics"/>
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <connections>
+                        <outlet property="fullContentTextView" destination="r5D-eh-Qtp" id="w5K-Zx-s6D"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ClY-Sy-iaJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-3912" y="-434"/>
+        </scene>
         <!--Card Details Description Page View Controller-->
         <scene sceneID="yhB-JT-aho">
             <objects>
@@ -308,7 +336,7 @@
                             <view opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="kTw-mY-Nr1" customClass="DTAttributedTextView">
                                 <rect key="frame" x="10" y="10" width="300" height="288"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                <color key="backgroundColor" red="0.18823529410000001" green="0.18823529410000001" blue="0.18823529410000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="0.28627450980392155" green="0.31372549019607843" blue="0.32941176470588235" alpha="1" colorSpace="calibratedRGB"/>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -655,122 +683,6 @@
         <image name="video_placeholder.png" width="320" height="180"/>
         <image name="xebia-essentials-sample-barcode.png" width="248" height="248"/>
     </resources>
-    <classes>
-        <class className="DTAttributedTextView" superclassName="UIScrollView">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/DTAttributedTextView.h"/>
-            <relationships>
-                <relationship kind="outlet" name="backgroundView" candidateClass="UIView"/>
-                <relationship kind="outlet" name="textDelegate"/>
-            </relationships>
-        </class>
-        <class className="EBEventTableViewController" superclassName="XBReloadableTableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/EBEventTableViewController.h"/>
-        </class>
-        <class className="GHMemberTableViewController" superclassName="XBReloadableTableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/GHMemberTableViewController.h"/>
-        </class>
-        <class className="GHRepositoryTableViewController" superclassName="XBReloadableTableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/GHRepositoryTableViewController.h"/>
-        </class>
-        <class className="GHTabBarController" superclassName="UITabBarController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/GHTabBarController.h"/>
-        </class>
-        <class className="TTTweetTableViewController" superclassName="XBReloadableTableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/TTTweetTableViewController.h"/>
-        </class>
-        <class className="UINavigationBar">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/UINavigationBar.h"/>
-            <relationships>
-                <relationship kind="action" name="back:"/>
-            </relationships>
-        </class>
-        <class className="VMVideoDetailsViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/VMVideoDetailsViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="commentCount" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="date" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="definition" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="displayName" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="likeCount" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="playCount" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="videoImage" candidateClass="UIImageView"/>
-            </relationships>
-        </class>
-        <class className="VMVideoTableViewController" superclassName="XBReloadableTableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/VMVideoTableViewController.h"/>
-        </class>
-        <class className="WPAuthorTableViewController" superclassName="XBReloadableTableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/WPAuthorTableViewController.h"/>
-        </class>
-        <class className="WPCategoryTableViewController" superclassName="XBReloadableTableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/WPCategoryTableViewController.h"/>
-        </class>
-        <class className="WPPostTableViewController" superclassName="XBInfiniteScrollTableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/WPPostTableViewController.h"/>
-        </class>
-        <class className="WPRecentPostTableViewController" superclassName="WPPostTableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/WPRecentPostTableViewController.h"/>
-        </class>
-        <class className="WPTabBarController" superclassName="UITabBarController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/WPTabBarController.h"/>
-        </class>
-        <class className="WPTagTableViewController" superclassName="XBReloadableTableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/WPTagTableViewController.h"/>
-        </class>
-        <class className="XBHomeController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/XBHomeController.h"/>
-        </class>
-        <class className="XBInfiniteScrollTableViewController" superclassName="XBReloadableTableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/XBInfiniteScrollTableViewController.h"/>
-        </class>
-        <class className="XBMenuViewController" superclassName="XBTableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/XBMenuViewController.h"/>
-        </class>
-        <class className="XBReloadableTableViewController" superclassName="XBTableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/XBReloadableTableViewController.h"/>
-        </class>
-        <class className="XBTableViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/XBTableViewController.h"/>
-        </class>
-        <class className="XBWebViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/XBWebViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="webView" candidateClass="UIWebView"/>
-            </relationships>
-        </class>
-        <class className="XECardDetailsDescriptionPageViewController" superclassName="XECardDetailsPageViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/XECardDetailsDescriptionPageViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="descriptionTextView" candidateClass="DTAttributedTextView"/>
-            </relationships>
-        </class>
-        <class className="XECardDetailsPageViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/XECardDetailsPageViewController.h"/>
-        </class>
-        <class className="XECardDetailsQRCodePageViewController" superclassName="XECardDetailsPageViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/XECardDetailsQRCodePageViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="qrCodeImage" candidateClass="UIImageView"/>
-            </relationships>
-        </class>
-        <class className="XECardDetailsViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/XECardDetailsViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="changePage:"/>
-                <relationship kind="outlet" name="descriptionBackgroundView" candidateClass="UIView"/>
-                <relationship kind="outlet" name="pageControl" candidateClass="UIPageControl"/>
-                <relationship kind="outlet" name="scrollView" candidateClass="UIScrollView"/>
-                <relationship kind="outlet" name="titleBackgroundView" candidateClass="UIView"/>
-                <relationship kind="outlet" name="titleLabel" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="XECardTableViewController" superclassName="XBReloadableTableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/XECardTableViewController.h"/>
-        </class>
-        <class className="XECategoryTableViewController" superclassName="XBReloadableTableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/XECategoryTableViewController.h"/>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
